crates/plotnik-tests/tests/02-parser/recovery_validation/lowercase_branch_label_suggests_capitalized.txt
Q = [first: (a) Second: (b)]
------------------ DIAGNOSTICS -------------------
error: alternative labels must be PascalCase
 --> query.ptk:1:6
  |
1 | Q = [first: (a) Second: (b)]
  |      ^^^^^
  |
help: use `First`
  |
1 - Q = [first: (a) Second: (b)]
1 + Q = [First: (a) Second: (b)]
  |
help: alternative labels name variant cases when the alternation produces a value
